- added: CLI CMD "A". Cancels all current transmissions - changed: ax25Connection.py handling if received DM Frame (Connection Reset) > Just Send DISC and end connection

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,11 +2,14 @@
 # 2.118.x
 Fixes:
 
-Optimierung:
+Optimierung/Änderungen:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
 - Pseudo TX-Delay für AXIP-Port aktiviert. (Bei Probleme mit BPQ)
+- AX25 Protokoll: Handling beim Empfangen eines DM-Frames bei
+  bestehender Verbindung.(Connection reset)
 
 Neue Implementierungen / Funktionen:
+- CLI CMD "A". Bricht alle aktuellen Aussendungen ab.
 
 ###########################################################################################################
 ###########################################################################################################
