- added: Mouse Button bindings to guiMain_AlarmFrame.py - opt: guiMain_TabbedSideFrame.py changed to get_strTab()

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,6 +10,7 @@ Optimierung/Änderungen:
 
 Neue Implementierungen / Funktionen:
 - CLI CMD "A". Bricht alle aktuellen Aussendungen ab.
+- Mausklick bindings für "Alarm Leiste" (rechts oben)
 
 ###########################################################################################################
 ###########################################################################################################
