guiMain.py: The size of the main window is now saved guiMain.py: The size of the various movable windows is now saved

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -14,6 +14,8 @@ Neue Implementierungen / Funktionen:
 - CLI CMD "A". Bricht alle aktuellen Aussendungen ab.
 - Mausklick bindings für "Alarm Leiste" (rechts oben)
 - awthemes support. Download: https://sourceforge.net/projects/tcl-awthemes/
+- Größe des Hauptfensters wird jetzt gespeichert
+- Größe der verschiedenen verschiebbaren Fenster wird jetzt gespeichert
 
 ###########################################################################################################
 ###########################################################################################################
