guiUserDB.py: changed for awthemes support guiNewEntry.py: changed for awthemes support guiMCastSettings.py: changed for awthemes support guiNewConnWin.py: changed for awthemes support guiAPRS_be_tracer.py: changed for awthemes support guiBBS_MSG_center.py: changed for awthemes support guiBBS_MSG_c_base.py: changed for awthemes support guiBBS_MSG_c_BBS.py: changed for awthemes support guiBBS_MSG_c_PMS.py: changed for awthemes support guiBBS_fwd_q.py: changed for awthemes support guiBBS_newMSG.py: changed for awthemes support guiMH.py: changed for awthemes support guiPriv.py: changed for awthemes support guiAbout.py: changed for awthemes support guiLocatorCalc.py: changed for awthemes support guiHelpKeybinds.py: changed for awthemes support guiRxEchoSettings.py: changed for awthemes support guiGPIO_Settings.py: changed for awthemes support guiGPIO_PinSetup.py: changed for awthemes support guiFTextSettings.py: changed for awthemes support guiPortSettings.py: changed for awthemes support guiStationSettings.py: changed for awthemes support guiBeaconSettings.py: changed for awthemes support guiDigiSettings.py: changed for awthemes support gui1WireSettings.py: changed for awthemes support (untested) guiDualPortSettings.py: changed for awthemes support guiDualPortMon.py: changed for awthemes support guiLinkholderSettings.py: changed for awthemes support guiLinkholderSettings.py: translation-tab added guiPipeToolSettings.py: changed for awthemes support guiPipeToolSettings.py: fixed Scripterror if try to delete empty config guiFileTX.py: changed for awthemes support guiFT_Manager.py: changed for awthemes support gui_ConnPath_plot.py: changed for awthemes support (no solution for Toolbar yet) guiAPRS_wx_tree.py: changed for awthemes support guiAPRS_pn_msg.py: changed for awthemes support guiAISmon.py: changed for awthemes support guiAPRSnewMSG.py: changed for awthemes support guiAPRSnewMSG.py: AttributeError when calling guiBBS_Settings_Main.py: changed for awthemes support 

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,6 +2,9 @@
 # 2.118.x
 Fixes:
 - Scripterror in cliBOX.py
+- Scripterror in guiAPRSnewMSG.py beim Aufrufen
+- Scripterror in guiPipeToolSettings.py wenn versucht wird leere
+  Config zu löschen
 
 Optimierung/Änderungen:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
