added: guiRightClick_Menu.py added: basic right_click-menu to guiMain.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -22,6 +22,7 @@ Neue Implementierungen / Funktionen:
 - awthemes support. Download: https://sourceforge.net/projects/tcl-awthemes/
 - Größe des Hauptfensters wird jetzt gespeichert
 - Größe der verschiedenen verschiebbaren Fenster wird jetzt gespeichert
+- Haupt-GUI: Rechtsklick-Menü
 
 ###########################################################################################################
 ###########################################################################################################
