--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@ Fixes:
 - BBS-Einstellungen - Routing: Zeigt werte für "BBS" und "THEME" nicht an
 - BBS-Einstellungen: Allgemeine Probleme mit der GUI
   (Aktualisierung der Tabs, Fehler beim Anlegen neuer FWD-Partner)
+- Scripterror im Message-Center beim verändern der Textgröße. (STRG +/-)
+- Messagcenter, Textgröße der Forwardwarteschlange wird nicht verändert.
 
 Optimierung/Änderungen:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
@@ -23,6 +25,8 @@ Neue Implementierungen / Funktionen:
 - Größe des Hauptfensters wird jetzt gespeichert
 - Größe der verschiedenen verschiebbaren Fenster wird jetzt gespeichert
 - Haupt-GUI: Rechtsklick-Menü
+- Message-Center: Rechtsklick-Menü
+- Message-Center: STRG-C Keybind
 
 ###########################################################################################################
 ###########################################################################################################
