added: guiBBS_newMSG.py, right-click menu added: guiBBS_newMSG.py._clipboard_past() added: guiBBS_newMSG translations

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -27,6 +27,7 @@ Neue Implementierungen / Funktionen:
 - Haupt-GUI: Rechtsklick-Menü
 - Message-Center: Rechtsklick-Menü
 - Message-Center: STRG-C Keybind
+- Neu PR-Mail GUI: Rechtsklick-Menü
 
 ###########################################################################################################
 ###########################################################################################################
