--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -29,6 +29,7 @@ Neue Implementierungen / Funktionen:
 - Message-Center: Rechtsklick-Menü
 - Message-Center: STRG-C Keybind
 - Neu PR-Mail GUI: Rechtsklick-Menü
+- Anordnung des Vorschreib-/QSO-/Monitor-Fesnters konfigurierbar
 
 ###########################################################################################################
 ###########################################################################################################
