--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -11,7 +11,7 @@ Fixes:
 - Scripterror im Message-Center beim verändern der Textgröße. (STRG +/-)
 - Messagcenter, Textgröße der Forwardwarteschlange wird nicht verändert.
 - Numpad-Enter sendet Text ohne Zeilenumbruch
-- BBS/PMS-Einstellungen: Sysop-Call ist nihct auswählbar als BOX-Call (für PMS-Mode)
+- BBS/PMS-Einstellungen: Sysop-Call ist nicht auswählbar als BOX-Call (für PMS-Mode)
 
 Optimierung/Änderungen:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
@@ -30,6 +30,7 @@ Neue Implementierungen / Funktionen:
 - Message-Center: Rechtsklick-Menü
 - Message-Center: STRG-C Keybind
 - Neu PR-Mail GUI: Rechtsklick-Menü
+- Neu PR-Mail GUI: F-Text Keybindings (Shift+F1 - Shift+F12)
 - Anordnung des Vorschreib-/QSO-/Monitor-Fesnters konfigurierbar
 
 ###########################################################################################################
