--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@ Fixes:
 - Messagcenter, Textgröße der Forwardwarteschlange wird nicht verändert.
 - Numpad-Enter sendet Text ohne Zeilenumbruch
 - BBS/PMS-Einstellungen: Sysop-Call ist nicht auswählbar als BOX-Call (für PMS-Mode)
+- Unbekannte Distanz (-1) wird im Monitor angezeigt
 
 Optimierung/Änderungen:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
