opt: str_fnc.py.try_decode() (Monitor Auto decoder function)

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -31,6 +31,8 @@ Optimierung/Änderungen:
     - NetRom
     - Distanzen
     - Hex-Ausgabe
+- Monitor Task Ressourcen optimiert (CPU-Last)
+- Monitor Auto Decoder
 
 Neue Implementierungen / Funktionen:
 - CLI CMD "A". Bricht alle aktuellen Aussendungen ab.
