del: AutoImport fm IDE guiNewConnWin.py guiRxEchoSettings.py add translational.. Again

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,13 @@
 ###########################################################################################################
+# 2.119.x
+Fixes:
+
+Optimierung/Änderungen:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.118.x
 Fixes:
 - Scripterror in cliBOX.py
