--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -21,7 +21,7 @@ Fixes:
 - BBS-Einstellungen - Routing: Zeigt werte für "BBS" und "THEME" nicht an
 - BBS-Einstellungen: Allgemeine Probleme mit der GUI
   (Aktualisierung der Tabs, Fehler beim Anlegen neuer FWD-Partner)
-- Scripterror im Message-Center beim verändern der Textgröße. (STRG +/-)
+- Scripterror im Message-Center beim Verändern der Textgröße. (STRG +/-)
 - Messagcenter, Textgröße der Forwardwarteschlange wird nicht verändert.
 - Numpad-Enter sendet Text ohne Zeilenumbruch
 - BBS/PMS-Einstellungen: Sysop-Call ist nicht auswählbar als BOX-Call (für PMS-Mode)
