fixed: Attribute error in ax25Port.py while try to close port. (TNC-Serial Port .. )

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,6 +1,7 @@
 ###########################################################################################################
 # 2.119.x
 Fixes:
+- Script-Error wenn Port geschlossen wird (TNC an Seriellen Port)
 
 Optimierung/Änderungen:
 - AXIP Port handling
