--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,6 +2,7 @@
 # 2.119.x
 Fixes:
 - Script-Error, wenn Port geschlossen wird (TNC an Seriellen Port)
+- FRMR Decoder gibt string als Payload zurück anstatt bytes. Verursacht Chrash
 
 Optimierung/Änderungen:
 - AXIP Port handling
