added: BBS-Forwarding: Outgoing forwarding can be disabled

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -27,6 +27,7 @@ Neue Implementierungen / Funktionen:
   ignoriert/abgewiesen)
 - Blacklist für eingehende Verbindungen.
 - BBS-Forwarding: Timeout für tote Verbindung
+- BBS-Forwarding: Ausgehende Verbindungen deaktivierbar
 
 ###########################################################################################################
 ###########################################################################################################
