fixed: Settings in BBS>Routing are not saved

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -16,6 +16,8 @@ Fixes:
   gelöscht wurde
 - BBS-Auto-Mail: keine Absender-BBS.
 - BBS: falsche *** No Route *** Nachricht werden an den Sysop gesendet
+- BBS-Einstellungen > Routing: Einstellungen für
+  PN-Prio/PN-AutoPath/PN-Erlauben/BL-Erlauben wurden nicht gespeichert.
 
 Optimierung/Änderungen:
 - AXIP Port handling
