--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,7 +10,7 @@ Fixes:
 - BBS-Forwarding, Software Identifier wird beim Forwarding nicht ausgewertet
 - BBS-Routing, Routingregeln für Bulletin Nachrichten werden nicht richtig
   abarbeitet
-- Sortierung der Forward-Warteschlange geht verloren nach update (Änderungen der
+- Sortierung der Forward-Warteschlange(GUI) geht verloren nach update (Änderungen der
   Warteschlange)
 - FWD-Warteschlange wird nicht aktualisiert, wenn Nachricht aus Warteschlange
   gelöscht wurde
@@ -29,7 +29,7 @@ Optimierung/Änderungen:
 - Programm Initialisierungsprozedur (Alle eingehenden Verbindungen werden
   ignoriert, solange die Initialisierung nicht vollständig abgeschlossen ist)
 - Unnötige updates der Forward-Warteschlange
-- Fehlende Übersetzungen verfollständigt by ClaudeMa
+- Fehlende Übersetzungen vervollständigt by ClaudeMa
 
 Neue Implementierungen / Funktionen:
 - Net/Rom INP decoder
