added: BBS: some Forward statistics/counters

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,8 +3,11 @@
 Fixes:
 
 Optimierung/Änderungen:
+- GUI Tasker-Warteschlange
+- Systemnachrichtenausgaben im Monitor beim Beenden von PoPT
 
 Neue Implementierungen / Funktionen:
+- BBS Forward-Statistiken/Zähler
 
 ###########################################################################################################
 ###########################################################################################################
