added: Statistic/Counter tab in guiBBS_fwd_q.py opt: Tasker in guiBBS_fwd_q.py added: CLI-CMD "(FWDI)NFO" in cliBOX.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,9 +8,12 @@ Fixes:
 Optimierung/Änderungen:
 - GUI Tasker-Warteschlange
 - Systemnachrichtenausgaben im Monitor beim Beenden von PoPT
+- Tasker für GUI FWD-Warteschlange
 
 Neue Implementierungen / Funktionen:
-- BBS Forward-Statistiken/Zähler
+- BBS Forward-Statistiken/Zähler in GUI FWD-Warteschlange
+- BBS Forward-Statistiken/Zähler Tabelle in GUI FWD-Warteschlange
+- CLI-CMD "(FWDI)NFO" gibt FWD-Statistik/Zähler zurück
 
 ###########################################################################################################
 ###########################################################################################################
