opt: database calls added: CLI-CMD "(MR)" marks all personal messages as read.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -17,11 +17,13 @@ Optimierung/Änderungen:
 - GUI-APRS-Server Monitor Update-Tasks
 - GUI-APRS-Nachrichten Update-Tasks
 - GUI-APRS-Nachrichten (etwas) überarbeitet
+- Datenbank Abfragen
 
 Neue Implementierungen / Funktionen:
 - BBS Forward-Statistiken/Zähler in GUI FWD-Warteschlange
 - BBS Forward-Statistiken/Zähler Tabelle in GUI FWD-Warteschlange
 - CLI-CMD "(FWDI)NFO" gibt FWD-Statistik/Zähler zurück
+- CLI-CMD "(MR)" markiert alle pers. Nachrichten als gelesen.
 
 ###########################################################################################################
 ###########################################################################################################
