opt: Line break check methods in various GUIs revived: guiAPRS_pn_msg.py & guiAPRSnewMSG.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -18,6 +18,7 @@ Optimierung/Änderungen:
 - GUI-APRS-Nachrichten Update-Tasks
 - GUI-APRS-Nachrichten (etwas) überarbeitet
 - Datenbank Abfragen
+- Zeilenumbruch-Check Methoden in diversen GUI's
 
 Neue Implementierungen / Funktionen:
 - BBS Forward-Statistiken/Zähler in GUI FWD-Warteschlange
