--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,6 +6,10 @@ Fixes:
   FWD-Warteschlange entfernt wird
 - Zeilenumbruch für APRS-Nachrichten
 - Eigene APRS-Nachrichten werden nicht angezeigt
+- Eingehende S&F-Forwardverbindung wird nicht Disconnected wenn FWD
+  beendet ist.
+- S= Nachrichten (Nachricht wird bereits von einer anderen Station empfangen)
+  werden nicht erneut zum FWD angeboten.
 
 Optimierung/Änderungen:
 - GUI Tasker-Warteschlange
